src/components/mobile/MobileContact.module.css
.night-contact {
  background: #061735;
  color: #e0e1dd;
  height: 100vh;
  width: 100%;
  text-align: center;
}

.day-contact {
  background: #ececeb;
  color: #080808;
  height: 100vh;
  width: 100%;
  text-align: center;
}

.night-contact a:link {
  text-decoration: none;
  color: #d1495b;
  outline: none;
}

.night-contact a:visited {
  text-decoration: none;
  color: #d1495b;
}

.night-contact a:active {
  text-decoration: underline;
  color: gainsboro;
}

.day-contact a:link {
  text-decoration: none;
  color: #d1495b;
  outline: none;
}

.day-contact a:visited {
  text-decoration: none;
  color: #d1495b;
}

.day-contact a:active {
  text-decoration: underline;
  color: silver;
}

.email-button {
  user-select: default;
  color: #d1495b;
}

.contact-text {
  font-size: 1.5em;
  padding: 30vh 5vw 0vh 5vw;
}

.contact-links {
  font-size: 3em;
  cursor: pointer;
  display: inline-block;
  padding: 5vh 2vw 0vh 2vw;
}

.night-zara-image {
  height: 1.5em;
  width: 1.125em;
  position: absolute;
  left: 50%;
  bottom: -200vh;
  filter: invert(100%);
}

.night-zara-image:hover {
  cursor: pointer;
}

.day-zara-image {
  height: 1.5em;
  width: 1.125em;
  position: absolute;
  left: 1%;
  bottom: -200vh;
}

.day-zara-image:hover {
  cursor: pointer;
}

.animated img {
  animation-name: Logo;
  position: absolute;
  animation-duration: 10s;
  animation-iteration-count: 1;
  z-index: 9999;
}

@keyframes Logo {
  0% {
    right: 0;
    transform: translate(0%);
  }
  25% {
    right: 0;
    transform: translateX(-500%);
  }
  50% {
    right: 0;
    transform: translateY(50%);
    height: 60vh;
    width: 40vh;
  }

  75% {
    right: 0;
    transform: translateX(-250%);
  }
  100% {
    right: 0;
    transform: translateX(0%);
  }
}

